source/stylesheets/sr.css
/* 
   _____                  _              ____        __          __ 
  / ___/__  ______  _____(_)_______     / __ \____  / /_  ____  / /_
  \__ \/ / / / __ \/ ___/ / ___/ _ \   / /_/ / __ \/ __ \/ __ \/ __/
 ___/ / /_/ / / / / /  / (__  )  __/  / _, _/ /_/ / /_/ / /_/ / /_  
/____/\__,_/_/ /_/_/  /_/____/\___/  /_/ |_|\____/_.___/\____/\__/  

Founded with love and care by Michael Edwards & David Lyons.
Content, code, and design Copyright (c) 2015 Sunrise Robot, LLC.

Site Designer: Michael Edwards
Twitter: @medwardsmusic
Website: pseudomichael.com

Site Developer: David Lyons
Twitter: @lyonsinbeta
Website: lyonsinbeta.com

*/

/* Structure */
html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 216px;
}

header {
  border-bottom: 1px solid #ddd;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.subheader {
  padding: 16px 0;
  background-color: #fcfcfc;
  border-bottom: 1px solid #efefef;
}

.main-content {
  margin: 16px 0 0;
}

.show-list {
  margin-top: 16px;
}

.show-notes {
  margin-bottom: 32px;
}

.support {
  margin-top: 16px;
}

.host-img {
  margin-bottom: 16px;
}


/* Typography */

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
}

footer {
  font-family: 'Open Sans', sans-serif;
  color: #fff;
  background-color: #ff7800;
}

p, ol li, ul li {
  font-size: 20px;
  font-weight: 400;
  line-height: 28px;
}

ul {
  margin: 16px 0 16px;
}

ul li {
  margin-bottom: 4px;
}

h1, h2, h3, h4 {
  font-family: 'Oswald', sans-serif;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

h1 {
  font-size: 40px;
  line-height: 48px;
  margin: 0 0 4px;
}

h2 {
  font-size: 32px;
  line-height: 40px;
  margin: 0 0 4px;
}

h3 {
  font-size: 28px;
  line-height: 36px;
  margin: 0 0 4px;
}

h4 {
  font-size: 24px;
  line-height: 32px;
  margin: 0 0 4px;
}

footer p, footer ul li, footer ol li {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 12px;
  line-height: 18px;
}

footer h2 {
  color: #ebabb6;
  font-size: 42px;
  line-height: 60px;
  font-weight: normal;
  margin: 4px 0 8px;
  text-shadow: 4px 4px 0 #ffb16b, 8px 8px 0 #c85e00; 
}

.sunrise {
  font-family: 'Fugaz One', sans-serif;
  font-weight: normal;
}

.index-show-desc {
    font-size: 20px;
    line-height: 28px;
}

.index-show-title {
    font-size: 32px;
    line-height: 40px;
}

.show-title {
  margin: 8px 0;
}

.list-episodes li {
  padding: 8px 0;
  margin-bottom: 16px;
}

.list-episode-date {
  font-family: 'Oswald', sans-serif;
  font-weight: 300;
  font-size: 20px;
  color: #999999;
  margin: 0;
  line-height: 28px;
}

.list-episode-title {
  font-size: 1.5em;
  font-weight: 300;
}

.page-number {
  font-family: 'Open Sans', sans-serif;
  font-size: 12px;
  line-height: 30px;
}

.host-name {
  font-family: 'Oswald', sans-serif;
  font-size: 24px;
  font-weight: 300;
}

.host-links {
  margin: 6px 0 0 -12px;
}

ul.host-links li {
  font-family: 'Open Sans', serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
}

.episode-date {
  font-family: 'Oswald', sans-serif;
  font-weight: 300;
  font-size: 20px;
  margin: 8px 0 4px 0;
  color: #666;
}

.episode-title {
  font-size: 28px;
  line-height: 36px;
  margin: 4px 0;
}

.episode-desc {
  font-size: 18px;
  line-height: 26px;
}

.btn {
  font-family: 'Open Sans', sans-serif;
}

.btn-lg {
  font-family: 'Oswald', sans-serif;
  font-weight: 400;
}


/* Links */

a, a:active {
  color: #333;
  text-decoration: none;
}
a:hover,
a:focus {
  color: #ff7800;
  text-decoration: none;
}

header a, header a:active {
  color: #fff;
  text-decoration: none;
}
header a:hover,
header a:focus {
  color: #fff;
  text-decoration: none;
}

.show-notes a {
  text-decoration: underline;
}

article a:hover, article a:focus {
  text-decoration: underline;
}

.list-episode-title a:hover {
  text-decoration: none;
}

footer a, footer a:active {
  color: #fff;
  font-weight: 400;
  text-decoration: none;
}

footer p a {
}

footer a:hover,
footer a:focus {
  color: #ffe7d2;
  text-decoration: none;
}

footer h2 a:hover, footer h2 a:focus {
  color: #fff;
  text-shadow: 4px 4px 0 #ffb16b, 8px 8px 0 #e86d00;
}




/* Buttons */

/*.btn-default {
  color: #fff;
  background-color: #ff7800;
  border-color: #df6900;
}
.btn-default:hover,
.btn-default:focus,
.btn-default.focus,
.btn-default:active,
.btn-default.active,
.open > .dropdown-toggle.btn-default {
  color: #ff7800;
  background-color: #ffe7d2;
  border-color: #fcb06a;
}*/

.btn-itunes {
  color: #fff;
  background-color: #0090ff;
  border-color: #007ddd;
}

.btn-itunes:hover {
  color: #0090ff;
  background-color: #def1ff;
  border-color: #0090ff;
}

.btn-rss {
  color: #fff;
  background-color: #ff7800;
  border-color: #df6900;
}

.btn-rss:hover {
  color: #ff7800;
  background-color: #ffe7d2;
  border-color: #fcb06a;
}

.btn-support {
  color: #fff;
  background-color: #0090ff;
  border-color: #007ddd;
}

.btn-support:hover {
  color: #0090ff;
  background-color: #def1ff;
  border-color: #0090ff;
}

.btn-pagination {
  color: #777;
  background-color: #eee;
  border-color: #ddd;
}

.btn-reddit {
  color: #fff;
  background-color: #ff5700;
  border-color: #ff5700;
}

.btn-reddit:hover {
  color: #ff5700;
  background-color: #fff;
  border-color: #ff5700;
}

.btn-twitter {
  color: #fff;
  background-color: #55acee;
  border-color: #55acee;
}

.btn-twitter:hover {
  color: #55acee;
  background-color: #fff;
  border-color: #55acee;
}

.btn-facebook {
  color: #fff;
  background-color: #3b5998;
  border-color: #3b5998;
}

.btn-facebook:hover, .btn-facebook:focus {
  color: #3b5998;
  background-color: #fff;
  border-color: #3b5998;
}

.btn-google {
  color: #fff;
  background-color: #dd4b39;
  border-color: #dd4b39;
}

.btn-google:hover, .btn-google:focus {
  color: #dd4b39;
  background-color: #fff;
  border-color: #dd4b39;
}


/* Wide mobile (landscape) */

@media (min-width: 480px) {



}



/* Tablet portrait / Small Desktop */

@media (min-width: 768px) {

  .episode-desc {
    font-size: 16px;
    line-height: 24px;
  }

  .host-links {
    margin: 2px 0 0 -16px;
  }

  ul.host-links li {
    line-height: 20px;
  }

  .index-show-desc {
    font-size: 14px;
    line-height: 22px;
  }

  .index-show-title {
    font-size: 28px;
    line-height: 36px;
  }

}



/* Large Desktop */

@media (min-width: 992px) {

  .episode-desc {
    font-size: 18px;
    line-height: 26px;
  }

  .index-show-desc {
    font-size: 18px;
    line-height: 26px;
  }

  .index-show-title {
    font-size: 32px;
    line-height: 40px;
  }

  footer p, footer ul li, footer ol li {
    font-size: 14px;
  }

}




/* Extra Large Desktop */

@media (min-width: 1200px) {

  .episode-desc {
    font-size: 20px;
    line-height: 30px;
  }

  .index-show-desc {
    font-size: 20px;
    line-height: 30px;
  }

  .host-links {
    margin: 6px 0 0 -12px;
  }

  ul.host-links li {
    line-height: 24px;
  }

}

